saving in Mongo and postgres